"use strict";
var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
    return c > 3 && r && Object.defineProperty(target, key, r), r;
};
var __metadata = (this && this.__metadata) || function (k, v) {
    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
};
Object.defineProperty(exports, "__esModule", { value: true });
var store_1 = require("@ngrx/store");
var angular_1 = require("@storybook/angular");
var core_1 = require("@angular/core");
var WithStoreComponent = /** @class */ (function () {
    function WithStoreComponent(store) {
        this.store = store;
    }
    WithStoreComponent.prototype.getSotreState = function () {
        return this.store === undefined ? 'Store is NOT injected' : 'Store is injected';
    };
    WithStoreComponent = __decorate([
        core_1.Component({
            selector: 'storybook-comp-with-store',
            template: '<div>{{this.getSotreState()}}</div>',
        }),
        __metadata("design:paramtypes", [store_1.Store])
    ], WithStoreComponent);
    return WithStoreComponent;
}());
angular_1.storiesOf('ngrx|Store', module)
    .addDecorator(angular_1.moduleMetadata({
    imports: [store_1.StoreModule.forRoot({})],
    declarations: [WithStoreComponent],
}))
    .add('With component', function () { return ({
    component: WithStoreComponent,
}); })
    .add('With template', function () { return ({
    template: "<storybook-comp-with-store></storybook-comp-with-store>",
}); });
